# flux-mail

./: .env.sample  Cargo.toml  README.md  nixpacks.toml
crates/database/: Cargo.toml
crates/database/src/: clear_old_mails.rs  database.rs  lib.rs  quota.rs  webhooks.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs
crates/smtp/: Cargo.toml
crates/smtp/src/: lib.rs  main.rs  server.rs  smtp.rs
crates/types/: Cargo.toml
crates/types/src/: errors.rs  types.rs
flux-mail/.nixpacks/: Dockerfile  build.sh  nixpkgs-ef56e777fedaa4da8c66a150081523c5de1e0171.nix
src/: database.rs  errors.rs  lib.rs  main.rs  server.rs  smtp.rs  types.rs
ui/: package.json  pnpm-lock.yaml
ui/app/: layout.tsx  page.tsx
ui/app/actions/: actions.ts
ui/app/mail/[query]/[id]/: page.tsx
ui/app/search/: SearchResults.tsx  page.tsx
ui/components/: AnimatedBackground.tsx  DesignElement.tsx  InteractiveTitle.tsx  ThemeToggle.tsx
ui/hooks/: parseEmail.ts
ui/styles/: globals.css
