[package]
name = "flux-mail"
description = "A simple implementation of SMTP Protocol as a temporary mail service in Rust"
version = "0.2.0"
edition = "2021"
author = "Shubham singh	<github: github.com/shubhexists>"
repository = "https://github.com/shubhexists/flux-mail"
license-file = "LICENSE"
categories = ["email"]
keywords = ["smtp", "email", "mail"]
readme = "README.md"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio-postgres = "0.7"
chrono = "0.4.39"
dotenv = "0.15"