[package]
name = "flux-database"
version = "0.2.1"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-postgres = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
flux-types = { workspace = true }
